@@ -25,8 +25,8 @@ import java.io.IOException;
 import java.sql.SQLException;
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 import org.apache.baremaps.database.repository.Constants;
+import org.apache.baremaps.openstreetmap.model.Element;
 import org.apache.baremaps.openstreetmap.model.Relation;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Tag;
@@ -55,7 +55,7 @@ class RelationRepositoryTest extends PostgresRepositoryTest {
         Arrays.asList(Constants.RELATION_2, Constants.RELATION_3, Constants.RELATION_4);
     relationRepository.put(relations);
     assertIterableEquals(relations, relationRepository
-        .get(relations.stream().map(e -> e.getId()).collect(Collectors.toList())));
+        .get(relations.stream().map(Element::getId).toList()));
   }
 
   @Test
@@ -72,9 +72,9 @@ class RelationRepositoryTest extends PostgresRepositoryTest {
     List<Relation> relations =
         Arrays.asList(Constants.RELATION_2, Constants.RELATION_3, Constants.RELATION_4);
     relationRepository.put(relations);
-    relationRepository.delete(relations.stream().map(e -> e.getId()).collect(Collectors.toList()));
+    relationRepository.delete(relations.stream().map(Element::getId).toList());
     assertIterableEquals(Arrays.asList(null, null, null), relationRepository
-        .get(relations.stream().map(e -> e.getId()).collect(Collectors.toList())));
+        .get(relations.stream().map(Element::getId).toList()));
   }
 
   @Test
@@ -84,6 +84,6 @@ class RelationRepositoryTest extends PostgresRepositoryTest {
         Arrays.asList(Constants.RELATION_2, Constants.RELATION_3, Constants.RELATION_4);
     relationRepository.copy(relations);
     assertIterableEquals(relations, relationRepository
-        .get(relations.stream().map(e -> e.getId()).collect(Collectors.toList())));
+        .get(relations.stream().map(Element::getId).toList()));
   }
 }
